GroupBy, highest salary, highest project duration